# ChildProcess

./: .clang-format  .editorconfig  .gitignore  BUILDING.md  ChildProcess.sln  ChildProcessExample.sln  Directory.Build.props  Directory.Build.targets  LICENSE  README.ja.md  README.md  azure-pipelines.yml  global.json
src/: ChildProcess.sln  FxCopRules.ruleset  PrivateAssembly.ruleset  PublicAssembly.ruleset  stylecop.json
src/ChildProcess/: ChildProcess.csproj
src/ChildProcess.Example/: ChildProcess.Example.csproj  ChildProcessExamples.cs  ChildProcessExamplesUnix.cs  ChildProcessExamplesWindows.cs  GlobalSuppressions.cs
src/ChildProcess.Example/Properties/: AssemblyInfo.cs
src/ChildProcess.ExamplePreview/: ChildProcess.ExamplePreview.csproj  ChildProcessExamples.cs  ChildProcessExamplesWindows.cs
src/ChildProcess.ManualTest/: ChildProcess.ManualTest.csproj  ChildProcessManualTestProgram.cs  ChildProcessManualTestProgramWindows.cs
src/ChildProcess.Native/: .gitignore  AncillaryDataSocket.cpp  AncillaryDataSocket.hpp  AsmichiChildProcess.symbols.txt  AsmichiChildProcess.version  Base.cpp  Base.hpp  CMakeLists.txt  CMakeSettings.template.json  ChildProcessState.cpp  ChildProcessState.hpp  ErrnoExceptions.hpp  ExactBytesIO.hpp  Exports.cpp  Globals.cpp  Globals.hpp  HelperExecutable.cpp  HelperMain.cpp  MiscHelpers.cpp  MiscHelpers.hpp  Protocol.md  Request.cpp  Request.hpp  Service.cpp  Service.hpp  SignalHandler.cpp  SignalHandler.hpp  SocketHelpers.cpp  Subbuild-linux.sh  Subbuild-unix.sh  Subbuild-win.ps1  Subchannel.cpp  Subchannel.hpp  SubchannelCollection.cpp  SubchannelCollection.hpp  UniqueResource.hpp  WriteBuffer.cpp  WriteBuffer.hpp  config.h.in
src/ChildProcess.Native/cmake/: toolchain-aarch64-linux-gnu.cmake  toolchain-arm-linux-gnueabihf.cmake  toolchain-arm64-osx.cmake  toolchain-linux-arm.cmake  toolchain-linux-arm64.cmake  toolchain-linux-musl-arm64.cmake  toolchain-linux-musl-x64.cmake  toolchain-linux-x64.cmake  toolchain-msvc-x64.cmake  toolchain-msvc-x86.cmake  toolchain-msvc.cmake  toolchain-osx-x64.cmake  toolchain-win-x64.cmake  toolchain-win-x86.cmake  toolchain-x64-linux.cmake  toolchain-x64-osx.cmake
src/ChildProcess.Native/include/: AncillaryDataSocket.hpp  Base.hpp  BinaryReader.hpp  ErrorCodeExceptions.hpp  MiscHelpers.hpp  Service.hpp  SignalHandler.hpp  SocketHelpers.hpp  Subchannel.hpp  SubchannelCollection.hpp
src/ChildProcess.Native/tests/: DumpEnvironmentVariables.unix.cpp  DumpEnvironmentVariables.win.cpp  ReportSignal.unix.cpp  ReportSignal.win.cpp  Startup.unix.cpp  TestChildMain.cpp  TestChildMain.win32.cpp  TestSignalHandler.cpp  TestSignalHandler.hpp
src/ChildProcess.Test/: ChildProcess.Test.csproj  GlobalSuppressions.cs  TemporaryDirectory.cs  TestUtil.cs
src/ChildProcess.Test/PlatformAbstraction/Windows/: CommandLineUtilTest.cs  EnvironmentBlockUtilTest.cs
src/ChildProcess.Test/ProcessManagement/: ChildProcessCreationContextTest.cs  ChildProcessExecutionTestUtil.cs  ChildProcessStartInfoTest.cs  ChildProcessTest.cs  ChildProcessTest_Creation.cs  ChildProcessTest_EnvironmentVariables.cs  ChildProcessTest_Handle.cs  ChildProcessTest_Performance.cs  ChildProcessTest_ProcessTree.cs  ChildProcessTest_Redirection.cs  ChildProcessTest_Signals.cs  ChildProcessTest_Waiting.cs  ChildProcessTest_Windows.cs  PerformanceTest.cs
src/ChildProcess.Test/Utilities/: EnvironmentVariableListUtilTest.cs  SearchPathSearcherTest.cs  SortedEnvironmentVariableListBuilderTest.cs  TemporaryDirectory.cs  TestUtil.cs  WindowsCommandLineUtilTest.cs  WindowsEnvironmentBlockUtilTest.cs
src/ChildProcess/Interop/Linux/: LibChildProcess.cs
src/ChildProcess/Interop/Windows/: InheritableHandleStore.cs  InputWriterOnlyPseudoConsole.cs  Kernel32.Console.cs  Kernel32.CreateProcess.cs  Kernel32.JobObject.cs  Kernel32.Pipe.cs  Kernel32.ProcThreadAttributeList.cs  Kernel32.cs  NtDll.cs  ProcThreadAttributeList.cs  SafeAnyHandle.cs  SafeJobObjectHandle.cs  SafePseudoConsoleHandle.cs  SafeThreadHandle.cs  SafeUnmanagedProcThreadAttributeList.cs  WindowsVersion.cs
src/ChildProcess/PlatformAbstraction/: ConsolePal.cs  EnvironmentPal.cs  FilePal.cs  HandlePal.cs  Pal.cs  ProcessPal.cs
src/ChildProcess/PlatformAbstraction/Linux/: ConsolePalLinux.cs  FilePalLinux.cs  HandlePalLinux.cs  ProcessPalLinux.cs
src/ChildProcess/PlatformAbstraction/Unix/: UnixConsolePal.cs  UnixEnvironmentPal.cs  UnixFilePal.cs
src/ChildProcess/PlatformAbstraction/Utilities/: NamedPipeUtil.cs
src/ChildProcess/ProcessManagement/: AsmichiChildProcessInternalLogicErrorException.cs  AsmichiChildProcessLibraryCrashedException.cs  ChildProcess.Start.cs  ChildProcess.cs  ChildProcessContext.cs  ChildProcessCreationContext.cs  ChildProcessHelper.cs  ChildProcessImpl.cs  ChildProcessStartInfo.cs  ChildProcessStartInfoInternal.cs  ChildProcessStartingBlockedException.cs  ChildProcessWaitHandle.cs  EnvironmentVariableListCreation.cs  IChildProcess.cs  IChildProcessContext.cs  IChildProcessState.cs  IChildProcessStateHelper.cs  PipelineStdHandleCreator.cs  ProcessCreationFailedException.cs  UnixChildProcessContext.cs  UnixChildProcessState.cs  UnixChildProcessStateHelper.cs  UnixHelperProcess.cs  UnixSubchannel.cs  WaitAsyncOperation.cs  WindowsChildProcessContext.cs  WindowsChildProcessState.cs  WindowsChildProcessStateHelper.cs  WindowsProcessWaitHandle.cs
src/ChildProcess/Properties/: AssemblyInfo.cs
src/ChildProcess/Utilities/: ArgumentValidationUtil.cs  CompletedBoolTask.cs  EnvironmentVariableListUtil.cs  EnvironmentVariablePairNameComparer.cs  EnvironmentVariableUtil.cs  MyBinaryWriter.cs  SearchPathSearcher.cs  SortedEnvironmentVariableListBuilder.cs  ThrowHelper.cs  WindowsCommandLineUtil.cs  WindowsEnvironmentBlockUtil.cs
src/TestChild/: Kernel32.cs  TestChild.csproj  TestChildProgram.cs
src/TestChild/Properties/: AssemblyInfo.cs
src/docker/childprocess-buildtools-ubuntu/: Dockerfile
src/docker/childprocess-buildtools-ubuntu-crosssysroot/: Dockerfile  build-sysroot-alpine.sh  extract-sysroot-ubuntu18.sh
src/docker/node-alpine-azuredevops/: Dockerfile
(+9 files in other folders)
